# p2p-net-storage

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRACT_COMPARISON_REPORT.md  DESIGN_PRINCIPLES.md  IMCOMMAND_MIGRATION.md  IM_OVER_P2P_PROTOCOL_APPENDIX.md  IM_REFACTORING.md  IM_SYSTEM_README.md  LICENSE  MONITOR_DASHBOARD_GUIDE.md  PROJECT_STRUCTURE.md  README.MD  TCP_PROTOCOL_OPTIMIZATION_REPORT.md  TOOL_CLASS_EXAMPLES.md  UDP_NETWORK_ANOMALY_TEST_README.md  UDP_PROTOCOL_OPTIMIZATION.md  WEBSOCKET_SDK_AND_JAVA_P2P_WS.md  nbactions.xml  pom.xml  基于固定长度数组和多级哈希的字符串存储系统.md
.brain/: policy.yaml
docs/: project-architecture.md  project-overview.md  project-workflows.md
examples/: GroupChatDemo.java  IM_Demo_Guide.md  IM_RUNNING_GUIDE.md  PerformanceDemo.java
p2p-cache/: pom.xml
p2p-core/: pom.xml
p2p-cos/: pom.xml
p2p-db/: README.md  add_get.py  debug_get.py  debug_get3.py  debug_get4.py  fix_bits.py  pom.xml  (+32 more)
p2p-ws-sdk-c/: CMakeLists.txt  README.md
p2p-ws-sdk-c/demo/: center_join.c  peer_connect.c  peer_node.c  relay_echo.c
p2p-ws-sdk-c/include/: p2p_ws.h  p2pws_buf.h  p2pws_crypto.h  p2pws_fs.h  p2pws_messages.h  p2pws_pb.h  p2pws_ws.h  p2pws_yaml.h
p2p-ws-sdk-c/src/: p2p_ws.c  p2pws_buf.c  p2pws_crypto.c  p2pws_fs.c  p2pws_messages.c  p2pws_pb.c  p2pws_ws.c  p2pws_yaml.c
p2p-ws-sdk-python/: README.md  pyproject.toml
p2p-ws-sdk-python/demo/: center_join.py  echo_client.py
p2p-ws-sdk-python/scripts/: gen_proto.py  verify_vectors.py  verify_wrapper.py
p2p-ws-sdk-python/src/p2p_ws_sdk/: __init__.py  frame.py  handshake.py  keyid.py  wrapper.py  xor.py
(+1026 files in other folders)
